--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
 
     <div class="assinatura">
       Com carinho, <br>
-      seu amigo de sempre 🤍
+      seu amigo Lucas 🤍
     </div>
   </div>
 
 </body>
 </html>
+
