--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
       Sério, cara… você é daquele tipo de amiga que faz a gente acreditar que as pessoas boas ainda existem em quantidade suficiente pra deixar o mundo mais leve.<br><br>
 
       Obrigado por ser sempre real, por rir das nossas besteiras, por ouvir quando a coisa aperta e por estar lá mesmo quando a vida fica corrida. <br>
-      Você merece um ano incrível: cheio de rolês bons, de músicas novas que te façam sorrir sozinha, de gente que te valoriza de verdade e de muita paz no coração.<br><br>
+      Você merece um ano incrível.<br><br>
 
       Continua sendo essa pessoa foda, carinhosa e autêntica que a gente tem orgulho de chamar de amiga.<br>
       Te desejo tudo de melhor da vida… e um pouquinho mais. Porque você merece.<br><br>
 
-      Feliz aniversário, minha parceira! 🥳
+      Feliz aniversário! 🥳
     </div>
 
     <div class="assinatura">
@@ -121,4 +121,5 @@
 
 </body>
 </html>
+
 
