--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
       Thayla,<br><br>
 
       Mais um ano de você iluminando tudo por onde passa. <br>
-      Sério, cara… você é daquele tipo de amiga que faz a gente acreditar que as pessoas boas ainda existem em quantidade suficiente pra deixar o mundo mais leve.<br><br>
+      Sério, cara… você é daquele tipo de amiga que mim faz acreditar que as pessoas boas ainda existem em quantidade suficiente pra deixar o mundo melhor.<br><br>
 
-      Obrigado por ser sempre real, por rir das nossas besteiras, por ouvir quando a coisa aperta e por estar lá mesmo quando a vida fica corrida. <br>
+      Obrigado por ser sempre real, por rir das minhas besteiras, por ouvir quando a coisa aperta e por estar lá mesmo quando a vida fica corrida. <br>
       Você merece um ano incrível.<br><br>
 
-      Continua sendo essa pessoa foda, carinhosa e autêntica que a gente tem orgulho de chamar de amiga.<br>
+      Continua sendo essa pessoa foda, carinhosa e autêntica que a gente tem orgulho de ter onhecido voce.<br>
       Te desejo tudo de melhor da vida… e um pouquinho mais. Porque você merece.<br><br>
 
-      Feliz aniversário! 🥳
+      Feliz aniversário tata! 🥳
     </div>
 
     <div class="assinatura">
@@ -121,5 +121,6 @@
 
 </body>
 </html>
+
 
 
