Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       Obrigado por ser sempre real, por rir das minhas besteiras, por ouvir quando a coisa aperta e por estar lá mesmo quando a vida fica corrida. <br>
       Você merece um ano incrível.<br><br>
 
-      Continua sendo essa pessoa foda, carinhosa e autêntica que a gente tem orgulho de ter onhecido voce.<br>
+      Continua sendo essa pessoa foda, carinhosa e autêntica que eu tenho orgulho de ter conhecido.<br>
       Te desejo tudo de melhor da vida… e um pouquinho mais. Porque você merece.<br><br>
 
       Feliz aniversário tata! 🥳
@@ -121,6 +121,7 @@
 
 </body>
 </html>
+
 
 
 
